slpf_examples/new_iptables_rules.v4
# Generated by admin
*filter
:INPUT ACCEPT [96:79140]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [87:25825]
:FORWARD_OC2 - [0:0]
:INPUT_OC2 - [0:0]
:OUTPUT_OC2 - [0:0]
-A INPUT -j INPUT_OC2
-A FORWARD -j FORWARD_OC2
-A OUTPUT -j OUTPUT_OC2
-A FORWARD_OC2 -s 172.19.0.1/32 -j ACCEPT
-A FORWARD_OC2 -d 172.19.0.0/24 -j REJECT --reject-with icmp-host-unreachable
-A FORWARD_OC2 -d 172.19.0.0/16 -j DROP
-A INPUT_OC2 -s 172.19.0.1/32 -j ACCEPT
-A INPUT_OC2 -d 172.19.0.0/24 -j REJECT --reject-with icmp-host-unreachable
-A INPUT_OC2 -d 172.19.0.0/16 -j DROP
-A OUTPUT_OC2 -s 172.19.0.1/32 -j ACCEPT
-A OUTPUT_OC2 -d 172.19.0.0/24 -j REJECT --reject-with icmp-host-unreachable
-A OUTPUT_OC2 -d 172.19.0.0/16 -j DROP
COMMIT
# Completed on Thu May 15 11:43:24 2025
